syntax = "proto3";

package echo;

// Echo 服务
service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

// Echo 请求消息
message EchoRequest {
  string message = 1;
}

// Echo 响应消息
message EchoResponse {
  string message = 1;
}
